@@ -1,6 +1,6 @@
 /**********************************************************************************
-* $URL: https://source.sakaiproject.org/svn/sam/tags/samigo-2.9.3/samigo-app/src/java/com/corejsf/util/Tags.java $
-* $Id: Tags.java 59684 2009-04-03 23:33:27Z arwhyte@umich.edu $
+* $URL: https://source.sakaiproject.org/svn/sam/tags/sakai-10.0/samigo-app/src/java/com/corejsf/util/Tags.java $
+* $Id: Tags.java 106463 2012-04-02 12:20:09Z david.horwitz@uct.ac.za $
 ***********************************************************************************
 * Copyright (c) 2004 Sun Microsystems from the Java Series, Core Java ServerFaces
 * source freely distributable.
@@ -13,7 +13,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *       http://www.osedu.org/licenses/ECL-2.0
+ *       http://www.opensource.org/licenses/ECL-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -65,7 +65,7 @@ public class Tags {
          setValueBinding(component, attributeName, attributeValue);
       else
          component.getAttributes().put(attributeName,
-               new Double(attributeValue));
+               Double.valueOf(attributeValue));
    }
 
    public static void setBoolean(UIComponent component,
@@ -75,7 +75,7 @@ public class Tags {
          setValueBinding(component, attributeName, attributeValue);
       else
          component.getAttributes().put(attributeName,
-               new Boolean(attributeValue));
+               Boolean.valueOf(attributeValue));
    }
 
    public static void setStrings(UIComponent component, Map map) {
@@ -181,9 +181,9 @@ public class Tags {
          Object r = app.createValueBinding(expression).getValue(context);
          if (r == null) return null;
          else if (r instanceof Boolean) return (Boolean) r;
-         else return new Boolean(r.toString());
+         else return Boolean.valueOf(r.toString());
       }
-      else return new Boolean(expression);
+      else return Boolean.valueOf(expression);
    }
 
    private static class ActionMethodBinding
